# wfc-cpp

./: CMakeLists.txt  README.md
src/: app.cpp  app.h  main.cpp
